crates/ty_python_semantic/resources/mdtest/snapshots/invalid_assignment_s…_-_Invalid_assignment_d…_-_Multiple_targets_(655e9238f07236b2).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: invalid_assignment_syntactic_variants.md - Invalid assignment diagnostics - Multiple targets
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/invalid_assignment_syntactic_variants.md
---

# Python source files

## mdtest_snippet.py

```
1 | x: int
2 | y: str
3 | 
4 | x, y = ("a", "b")  # error: [invalid-assignment]
5 | 
6 | x, y = (0, 0)  # error: [invalid-assignment]
```

# Diagnostics

```
error[invalid-assignment]: Object of type `Literal["a"]` is not assignable to `int`
 --> src/mdtest_snippet.py:4:1
  |
2 | y: str
3 |
4 | x, y = ("a", "b")  # error: [invalid-assignment]
  | -      ^^^^^^^^^^ Incompatible value of type `Literal["a"]`
  | |
  | Declared type `int`
5 |
6 | x, y = (0, 0)  # error: [invalid-assignment]
  |

```

```
error[invalid-assignment]: Object of type `Literal[0]` is not assignable to `str`
 --> src/mdtest_snippet.py:6:4
  |
4 | x, y = ("a", "b")  # error: [invalid-assignment]
5 |
6 | x, y = (0, 0)  # error: [invalid-assignment]
  |    -   ^^^^^^ Incompatible value of type `Literal[0]`
  |    |
  |    Declared type `str`
  |

```
