crates/ty_python_semantic/resources/mdtest/snapshots/invalid_assignment_s…_-_Invalid_assignment_d…_-_Named_expression_(f3e81bd84a3c9ca3).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: invalid_assignment_syntactic_variants.md - Invalid assignment diagnostics - Named expression
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/invalid_assignment_syntactic_variants.md
---

# Python source files

## mdtest_snippet.py

```
1 | x: int
2 | 
3 | (x := "three")  # error: [invalid-assignment]
```

# Diagnostics

```
error[invalid-assignment]: Object of type `Literal["three"]` is not assignable to `int`
 --> src/mdtest_snippet.py:3:2
  |
1 | x: int
2 |
3 | (x := "three")  # error: [invalid-assignment]
  |  -    ^^^^^^^ Incompatible value of type `Literal["three"]`
  |  |
  |  Declared type `int`
  |

```
