crates/ty_python_semantic/resources/mdtest/snapshots/not.md_-_Unary_not_-_Object_that_implemen…_(ab3f546bf004e24d).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: not.md - Unary not - Object that implements `__bool__` incorrectly
mdtest path: crates/ty_python_semantic/resources/mdtest/unary/not.md
---

# Python source files

## mdtest_snippet.py

```
1 | class NotBoolable:
2 |     __bool__: int = 3
3 | 
4 | # error: [unsupported-bool-conversion]
5 | not NotBoolable()
```

# Diagnostics

```
error[unsupported-bool-conversion]: Boolean conversion is not supported for type `NotBoolable`
 --> src/mdtest_snippet.py:5:1
  |
5 | not NotBoolable()
  | ^^^^^^^^^^^^^^^^^
  |
info: `__bool__` on `NotBoolable` must be callable

```
